fix mobile overflow

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
